--- a/README
+++ b/README
@@ -1,11 +1,20 @@
 Lucas De La Pena
-python Assignment2_CS4420.py -a -g -rows numrows -cols numcols -t type indir outdir
+python resampleQuantize.py -a -g -rows numrows -cols numcols -t type indir outdir
 
+This script is an image sampling + quantization demo tool using OpenCV. It loads one image, shows the original, then downsamples it repeatedly, reduces intensity (color) precision, and finally upsamples it back so you can visually see the quality loss from sampling + quantization.
 
-This program is built off python 3 and is needed to run. You will also need to install opencv-python, and screeninfo. With this project my biggest issue was trying to get the upsampling to work, I think that was my biggest hurdle for the project. 
+-s : Sampling Method (Must be 1 or 2)
+    1 - pixel deletion / replication
+    2 - averaging / interpolation
+
+-d : (depth) how many times to downsample by 2 (each depth halves width + height) (input must be equal or greater than one)
+
+-i : (intensity) controls quantization strength (1-7) fewer unique intensity values as it increases 
+
+imagefile: path to the image file
 
 Sample execution:
- python Assignment3_CS4420.py -s 2 -d 5 -i 3 photo.png
+ python resampleQuantize.py -s 2 -d 5 -i 3 photo.png
 
 installs:
 pip install screen info
